--- a/force-app/main/default/lwc/summitEventsDiscountCodeSelector/summitEventsDiscountCodeSelector.html
+++ b/force-app/main/default/lwc/summitEventsDiscountCodeSelector/summitEventsDiscountCodeSelector.html
@@ -1,7 +1,9 @@
-// Copyright (c) 2024, Salesforce.org. All rights reserved.
-// Use of this source code is governed by a BSD 3-Clause.
-// License can be found in the LICENSE file in this repository.
-// Created by Thaddaeus Dahlberg on 2/06/2024.
+<!--
+Copyright (c) 2024, Salesforce.org. All rights reserved.
+ Use of this source code is governed by a BSD 3-Clause.
+License can be found in the LICENSE file in this repository.
+Created by Thaddaeus Dahlberg on 2/06/2024.
+-->
 
 <!-- Summit Events Discount Code Selector -->
 <template>
