fixed lwc with build errors

--- a/force-app/main/default/lwc/summitEventsDiscountCodeSelector/summitEventsDiscountCodeSelector.html
+++ b/force-app/main/default/lwc/summitEventsDiscountCodeSelector/summitEventsDiscountCodeSelector.html
@@ -10,7 +10,7 @@ Created by Thaddaeus Dahlberg on 2/06/2024.
     <div style="height: 300px;">
         <lightning-datatable
                 key-field="id"
-                data={discountCodes}
+                data={discountCodes.data}
                 columns={columns}>
         </lightning-datatable>
     </div>
