Working Time Input using workarounds

--- a/force-app/main/default/lwc/inputTime/inputTime.html
+++ b/force-app/main/default/lwc/inputTime/inputTime.html
@@ -10,5 +10,6 @@
         time-style={timeStyle}
         required={required}
         field-level-help={helpText}
+        onchange={handleChange}
     ></lightning-input>
 </template>
